+ fixed shoppingcart open/close state store + google map on homepage now is not covered by activtiybar, activitybar is below map

--- a/client/app/styles/source/_4_mixins_customized.scss
+++ b/client/app/styles/source/_4_mixins_customized.scss
@@ -307,7 +307,18 @@ googleMap, .angular-google-map, .angular-google-map-container {
   display: block;
   top: 0;
   right: 0;
-  bottom: 50px;
+  bottom: $footer-height;
+  left: 0;
+}
+
+.map-innerwrap {
+  position: fixed;
+  margin-left: $col-left-width;
+  overflow: hidden;
+  display: block;
+  top: 0;
+  right: 0;
+  bottom: 200px + $footer-height;
   left: 0;
 }
 
